--- a/frontend/src/components/Hero/hero.css
+++ b/frontend/src/components/Hero/hero.css
@@ -1,5 +1,7 @@
 /* frontend\src\components\Hero\hero.css */
 
+/* media query at bottom */
+
 .hero {
   /* Sizing */
   max-width: 100vw;
@@ -13,6 +15,7 @@
   /* Text styles */
   text-align: center;
   color: white;
+  letter-spacing: 2rem;
 
   /* Background styles */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -105,5 +108,11 @@
     animation-timing-function: ease-out;
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .hero {
+    letter-spacing: normal;
   }
 }
